{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 253,
  "lineage": "43156edf-22f4-ca12-a605-bf24964aa333",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:security-group/sg-02c9632645280593d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-02c9632645280593d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b699b37bc380275c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "laravel-eks-V8V64qfV-cluster-2024060408575292000000000a",
            "name_prefix": "laravel-eks-V8V64qfV-cluster-",
            "owner_id": "905418387368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "laravel-eks-V8V64qfV-cluster"
            },
            "tags_all": {
              "Name": "laravel-eks-V8V64qfV-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:security-group/sg-0b699b37bc380275c",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b699b37bc380275c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-08ca92103efe8c176"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c9632645280593d"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c9632645280593d"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c9632645280593d"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c9632645280593d"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c9632645280593d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c9632645280593d"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "laravel-eks-V8V64qfV-node-2024060408575292000000000b",
            "name_prefix": "laravel-eks-V8V64qfV-node-",
            "owner_id": "905418387368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "laravel-eks-V8V64qfV-node",
              "kubernetes.io/cluster/laravel-eks-V8V64qfV": "owned"
            },
            "tags_all": {
              "Name": "laravel-eks-V8V64qfV-node",
              "kubernetes.io/cluster/laravel-eks-V8V64qfV": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3558620884",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02c9632645280593d",
            "security_group_rule_id": "sgr-05c5f604d2f254548",
            "self": false,
            "source_security_group_id": "sg-0b699b37bc380275c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4051247858",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b699b37bc380275c",
            "security_group_rule_id": "sgr-0584c5dcb16bc3797",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-35488116",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b699b37bc380275c",
            "security_group_rule_id": "sgr-09fce60919795f82c",
            "self": false,
            "source_security_group_id": "sg-02c9632645280593d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2943930627",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b699b37bc380275c",
            "security_group_rule_id": "sgr-09bf4acebc0840020",
            "self": false,
            "source_security_group_id": "sg-02c9632645280593d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1715123861",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b699b37bc380275c",
            "security_group_rule_id": "sgr-028ea23f9756e97ea",
            "self": false,
            "source_security_group_id": "sg-02c9632645280593d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1969654452",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b699b37bc380275c",
            "security_group_rule_id": "sgr-04c9d244338ea51ea",
            "self": false,
            "source_security_group_id": "sg-02c9632645280593d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-298301823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b699b37bc380275c",
            "security_group_rule_id": "sgr-0143d26aeeef8b942",
            "self": false,
            "source_security_group_id": "sg-02c9632645280593d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-520820013",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b699b37bc380275c",
            "security_group_rule_id": "sgr-0eff23cfbfd820209",
            "self": false,
            "source_security_group_id": "sg-02c9632645280593d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2482115954",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b699b37bc380275c",
            "security_group_rule_id": "sgr-02f96593ae4d4c046",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-497225014",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b699b37bc380275c",
            "security_group_rule_id": "sgr-0165ef725379438a6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3120344793",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b699b37bc380275c",
            "security_group_rule_id": "sgr-0d49150fdb470b73e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:network-acl/acl-084fafe53e5979d95",
            "default_network_acl_id": "acl-084fafe53e5979d95",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-084fafe53e5979d95",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "905418387368",
            "subnet_ids": [
              "subnet-00b6c72c4e978c713",
              "subnet-04503d852787de32c",
              "subnet-04b93d840bc1b5c31",
              "subnet-0eefa3d51789b1b40",
              "subnet-0f8a59998fd5839f0",
              "subnet-0fd898fc8836f5519"
            ],
            "tags": {
              "Name": "laravel-vpc-default"
            },
            "tags_all": {
              "Name": "laravel-vpc-default"
            },
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:route-table/rtb-02ad257aad34c70c8",
            "default_route_table_id": "rtb-02ad257aad34c70c8",
            "id": "rtb-02ad257aad34c70c8",
            "owner_id": "905418387368",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "laravel-vpc-default"
            },
            "tags_all": {
              "Name": "laravel-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:security-group/sg-01c09cec99036f368",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01c09cec99036f368",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "905418387368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "laravel-vpc-default"
            },
            "tags_all": {
              "Name": "laravel-vpc-default"
            },
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f56a2e837f9741fc",
            "arn": "arn:aws:ec2:eu-central-1:905418387368:elastic-ip/eipalloc-0f56a2e837f9741fc",
            "association_id": "eipassoc-0bad4cef260ffbf15",
            "domain": "vpc",
            "id": "eipalloc-0f56a2e837f9741fc",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-03f72b7d3ba707453",
            "private_dns": "ip-10-0-4-161.eu-central-1.compute.internal",
            "private_ip": "10.0.4.161",
            "public_dns": "ec2-18-184-58-144.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.58.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "laravel-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "laravel-vpc-eu-central-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:internet-gateway/igw-05cf4983ed344e2a8",
            "id": "igw-05cf4983ed344e2a8",
            "owner_id": "905418387368",
            "tags": {
              "Name": "laravel-vpc"
            },
            "tags_all": {
              "Name": "laravel-vpc"
            },
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f56a2e837f9741fc",
            "association_id": "eipassoc-0bad4cef260ffbf15",
            "connectivity_type": "public",
            "id": "nat-083eef69a00704623",
            "network_interface_id": "eni-03f72b7d3ba707453",
            "private_ip": "10.0.4.161",
            "public_ip": "18.184.58.144",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f8a59998fd5839f0",
            "tags": {
              "Name": "laravel-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "laravel-vpc-eu-central-1a"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0beaf5fb459fa1d121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-083eef69a00704623",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0beaf5fb459fa1d12",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05cf4983ed344e2a8",
            "id": "r-rtb-00680a791896f9e371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00680a791896f9e37",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:route-table/rtb-0beaf5fb459fa1d12",
            "id": "rtb-0beaf5fb459fa1d12",
            "owner_id": "905418387368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-083eef69a00704623",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "laravel-vpc-private"
            },
            "tags_all": {
              "Name": "laravel-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:route-table/rtb-00680a791896f9e37",
            "id": "rtb-00680a791896f9e37",
            "owner_id": "905418387368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cf4983ed344e2a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "laravel-vpc-public"
            },
            "tags_all": {
              "Name": "laravel-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07258cacee95e963e",
            "route_table_id": "rtb-0beaf5fb459fa1d12",
            "subnet_id": "subnet-0eefa3d51789b1b40"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002e222086ce25275",
            "route_table_id": "rtb-0beaf5fb459fa1d12",
            "subnet_id": "subnet-00b6c72c4e978c713"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e050c06ab683abf",
            "route_table_id": "rtb-0beaf5fb459fa1d12",
            "subnet_id": "subnet-04b93d840bc1b5c31"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ede29de8e24b09a",
            "route_table_id": "rtb-00680a791896f9e37",
            "subnet_id": "subnet-0f8a59998fd5839f0"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e384de7eba72b1b",
            "route_table_id": "rtb-00680a791896f9e37",
            "subnet_id": "subnet-04503d852787de32c"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0372f87daaf5224d9",
            "route_table_id": "rtb-00680a791896f9e37",
            "subnet_id": "subnet-0fd898fc8836f5519"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:subnet/subnet-0eefa3d51789b1b40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eefa3d51789b1b40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418387368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laravel-vpc-private-eu-central-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "laravel-vpc-private-eu-central-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:subnet/subnet-00b6c72c4e978c713",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b6c72c4e978c713",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418387368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laravel-vpc-private-eu-central-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "laravel-vpc-private-eu-central-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:subnet/subnet-04b93d840bc1b5c31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b93d840bc1b5c31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418387368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laravel-vpc-private-eu-central-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "laravel-vpc-private-eu-central-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:subnet/subnet-0f8a59998fd5839f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8a59998fd5839f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418387368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laravel-vpc-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "laravel-vpc-public-eu-central-1a"
            },
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:subnet/subnet-04503d852787de32c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04503d852787de32c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418387368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laravel-vpc-public-eu-central-1b"
            },
            "tags_all": {
              "Name": "laravel-vpc-public-eu-central-1b"
            },
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:subnet/subnet-0fd898fc8836f5519",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd898fc8836f5519",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418387368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laravel-vpc-public-eu-central-1c"
            },
            "tags_all": {
              "Name": "laravel-vpc-public-eu-central-1c"
            },
            "vpc_id": "vpc-0412930fb8cdb7f86"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:905418387368:vpc/vpc-0412930fb8cdb7f86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084fafe53e5979d95",
            "default_route_table_id": "rtb-02ad257aad34c70c8",
            "default_security_group_id": "sg-01c09cec99036f368",
            "dhcp_options_id": "dopt-0b9e48f7a58967c5f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0412930fb8cdb7f86",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ad257aad34c70c8",
            "owner_id": "905418387368",
            "tags": {
              "Name": "laravel-vpc"
            },
            "tags_all": {
              "Name": "laravel-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}